[metadata]
name = slippi-ai
version = 0.1.0
author = Vlad Firoiu
author_email = vladfi2@gmail.com
description = Imitation learning from slippi replays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladfi1/slippi-ai
project_urls =
    Bug Tracker = https://github.com/vladfi1/slippi-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    slippi_ai
    slippi_ai/data
    slippi_ai/rl
    slippi_ai/nash
    slippi_db
include_package_data = True
python_requires = >=3.9
install_requires =
    pandas
    dm-sonnet
    melee
    gdown
    tensorflow_probability
    wandb
    simplekv
    boto3
    pymongo
    dnspython
    fancyflags
    pyarrow
    py7zr
    parameterized
    portpicker
