[metadata]
name = slippi-ai
version = 0.2.0
author = Vlad Firoiu
author_email = vladfi2@gmail.com
description = Imitation learning from slippi replays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladfi1/slippi-ai
project_urls =
    Bug Tracker = https://github.com/vladfi1/slippi-ai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    slippi_ai
    slippi_ai/data
    slippi_ai/rl
    slippi_ai/jax
    slippi_db
include_package_data = True
python_requires = >=3.11
install_requires =
    pandas
    dm-tree
    melee>=0.43.0
    wandb
    dnspython
    fancyflags
    pyarrow
    peppi-py
    py7zr
    parameterized
    portpicker
    tqdm
    jax
    flax>=0.12

[options.extras_require]
dev =
    pylint>=2.14.0
    nbstripout

cuda12 =
    jax[cuda12]

cuda13 =
    jax[cuda13]
